Fixed Broken Solution

--- a/cms/Web.config
+++ b/cms/Web.config
@@ -16,9 +16,8 @@
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=(localdb)\mssqllocaldb;integrated security=SSPI;attachdbfilename=|DataDirectory|\aspnetdb.mdf" providerName="System.Data.SqlClient" />
     <add name="NWindConnectionString" connectionString="data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\NWind.mdf;integrated security=True;connect timeout=120" providerName="System.Data.SqlClient" />
-    <!--<add name="CmsEntityModel" connectionString="metadata=res://*/CmsEntityModel.csdl|res://*/CmsEntityModel.ssdl|res://*/CmsEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BEST-HP\SQLEXPRESS;initial catalog=Cms;user id=sa;password=@cmsmakhado27!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="CMSEntityModel" connectionString="metadata=res://*/CMSEntityModel.csdl|res://*/CMSEntityModel.ssdl|res://*/CMSEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Makhadocms.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="cmsEntities1" connectionString="metadata=res://*/CMSEntityModel.csdl|res://*/CMSEntityModel.ssdl|res://*/CMSEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BEST-HP\PALTRACK;initial catalog=cms;persist security info=True;user id=sa;password=P@ltrack;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
